# beluga-builder

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  mdict.rs  raw.rs  utils.rs
