[package]
name = "beluga-builder"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
quick-xml = "0.31.0"
ripemd128 = "0.1.2"
rust-lzo = "0.6.2"
pbr = "1.1.1"
clap = "4.5.4"
rusqlite = {version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
encoding_rs = "0.8.34"
beluga-core = {path = "./beluga-core"}
